--- a/style.css
+++ b/style.css
@@ -1,41 +1,38 @@
-*{
+* {
 	margin: 0;
 	padding: 0;
 	font-family: verdana, sans-serif;
-  box-sizing:border-box;
+	box-sizing: border-box;
 }
 
-.nav{
+.nav {
 	width: 100%;
 	height: 87px;
 	background: #C2185B;
 	display: flex;
+	position: fixed;
+	z-index: 5;
 }
 
-
-.div-logo{
-  width: 20%;
-  padding: 15px 0 0 20px;
-	
+.div-logo {
+	width: 20%;
+	padding: 20px 0 0 20px;
 }
 
-
-.div-menu{
+.div-menu {
 	width: 80%;
-
-
 }
 
-.menu{
+.menu {
 	display: flex;
 	list-style: none;
 	float:right;
 	height: 30px;
-	margin-right: 15px;
-	margin-top: 15px;
+	margin-right: 25px;
+	margin-top: 25px;
 }	
 
-.menu-item{
+.menu-item {
 	height: 30px;
 	margin-left: 15px;
 }
@@ -51,8 +48,145 @@
 	vertical-align: center;
 	transition: all 0.2s linear;
 }
-.menu-item:hover{
+
+.menu-item:hover {
 	height: 35px;
 	border-bottom: 5px solid;	
 	border-color: #fff;
+}
+
+.banner-container {
+	width: 100%;
+	height: 394px;
+	position: absolute;
+	margin-top: 87px;
+}
+
+.div-banner {
+	width: 100%;
+	height: 100%;
+}
+
+.img-banner {
+	width: 100%;
+}
+
+.div-sombra-banner {
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.3;
+	z-index: 2;
+	position: absolute;
+}
+
+.div-descricao-banner-sombra {
+	position: absolute;
+	margin-left: 860px;
+	margin-top: 120px;
+	width: 479px;
+	height: 250px;
+	color: #FFF;
+	background-color: #000;
+	opacity: 0.6;
+}
+.div-descricao-texto {
+	position: absolute;
+	margin-top: 120px;
+	margin-left: 860px;
+	width: 479px;
+	height: 250px;
+}
+
+.titulo-desc-banner {
+	margin-left: 20px;
+	margin-top: 20px;
+	font-weight: bold;
+	font-size: 20px;
+	color: #FFF;
+}
+
+.texto-desc-banner {
+	margin-left: 20px;
+	margin-top: 20px;
+	font-size: 18px;
+	color: #FFF;
+}
+
+.div-separador-titulo-descricao {
+	position: absolute;
+	margin-left: 880px;
+	margin-top: 165px;
+	width: 389px;
+	height: 2.5px;
+	background-color: #C2185B; 
+}
+
+.div-titulo-produtos-destaque {
+	position: absolute;
+	margin-left: 0px;
+	margin-top: 477px;
+	width: 100%;
+	height: 100px;
+}
+
+.div-titulo-produtos-1 {
+	position: absolute;
+	margin-left: 40px;
+	margin-top: 520px;
+	width: 340px;
+	height: 40px;
+	background-color: #C2185B; 
+	color: #FFF;
+}
+
+.div-titulo-produtos-2 {
+	position: absolute;
+	margin-left: 350px;
+	margin-top: 557px;
+	width: 100px;
+	height: 3px;
+	background-color: #C2185B;
+}
+
+.div-titulo-produtos-destaque-texto {
+	position: absolute;
+	margin-left: 60px;
+	margin-top: 525px;
+	font-size: 140%; 	 
+	color: #FFF;
+}
+
+.div-produtos-destaque {
+	position: absolute;
+	margin-top: 562px;
+	width: 100%;
+	height: 500px;	
+}
+
+.div-produtos-destaque {
+	margin-top: 600px;
+	margin-left: 40px;
+	width: 402px;
+	height: 403px;
+	background-color: #EEEEEE;
+}
+
+.img-produto-1 {
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
+.div-texto-titulo-produto-1 {
+	color: #526CFE;
+	margin-top: 5px;
+	margin-left: 12px;
+	font-size: 20px;
+}
+
+.div-texto-produto-1 {
+	margin-top: 15px;
+	margin-left: 12px;
+	font-size: 18px;
+	color: #fff;
 }
