--- a/style.css
+++ b/style.css
@@ -153,15 +153,13 @@
 	position: absolute;
 	margin-left: 60px;
 	margin-top: 525px;
-	font-size: 140%; 	 
+	font-size: 26px; 	 
 	color: #FFF;
 }
 
-.div-produtos-destaque {
-	position: absolute;
-	margin-top: 562px;
-	width: 100%;
-	height: 500px;	
+.div-produtos {
+	display: flex;
+	justify-content; space-between;
 }
 
 .div-produtos-destaque {
@@ -172,21 +170,118 @@
 	background-color: #EEEEEE;
 }
 
-.img-produto-1 {
+.img-produto {
 	margin-left: 10px;
 	margin-top: 10px;
 }
 
-.div-texto-titulo-produto-1 {
+.div-texto-titulo-produto {
 	color: #526CFE;
 	margin-top: 5px;
 	margin-left: 12px;
 	font-size: 20px;
 }
 
-.div-texto-produto-1 {
+.div-texto-produto {
 	margin-top: 15px;
 	margin-left: 12px;
 	font-size: 18px;
-	color: #fff;
+	color: #000;
+}
+
+.div-separador-servico {
+	width: 1300px;
+	height: 2px;
+	background-color: #536DFE;
+	margin-left: 40px;
+	margin-top: 40px;
+}
+
+.div-titulo-servico-1{
+	margin-left: 40px;
+	margin-top: 30px;
+	width: 340px;
+	height: 40px;
+	background-color: #C2185B; 
+	color: #FFF;
+}
+
+.div-titulo-servico-2 {
+	margin-left: 350px;
+	margin-top: -3px;
+	width: 100px;
+	height: 3px;
+	background-color: #C2185B;
+}
+
+
+.div-servicos {
+	display: flex;
+	flex-direction: column;
+}
+
+.div-servico-1 {
+	width: 1289px;
+	height: 290px;
+	margin-left: 40px;
+	margin-top: 40px;
+	background-color: #EEEEEE;
+}
+
+.div-titulo-servico-texto {
+	margin-left: 10px;
+	margin-top: 15px;
+	font-size: 24px;
+	color: #FFF;
+}
+
+.img-servico {
+	margin-top: 15px;
+	margin-left: 15px;
+}
+
+.div-titulo-servico {
+	margin-left: 600px;
+	margin-top: -265px;
+	font-size: 34px;
+	color: #526CFE;
+}
+
+.div-texto-servico {
+	color: #000000;
+	margin-left: 600px;
+	margin-top: 20px;
+	font-size: 20px;
+}
+
+.div-separador-contato {
+	width: 1300px;
+	height: 2px;
+	background-color: #536DFE;
+	margin-left: 40px;
+	margin-top: 40px;
+}
+
+.div-titulo-contato-1{
+	margin-left: 40px;
+	margin-top: 30px;
+	width: 340px;
+	height: 40px;
+	background-color: #C2185B; 
+	color: #FFF;
+}
+
+.div-titulo-contato-2 {
+	margin-left: 350px;
+	margin-top: -3px;
+	width: 100px;
+	height: 3px;
+	background-color: #C2185B;
+}
+
+.div-titulo-contato-texto {
+	margin-left: 10px;
+	margin-top: 20px;
+	font-size: 26px;
+	color: #FFF;
 }
