--- a/site-juca-sexshop-responsive/style.css
+++ b/site-juca-sexshop-responsive/style.css
@@ -5,11 +5,12 @@
 	box-sizing: border-box;
 }
 
-.nav {
+.header {
 	width: 100%;
 	height: 87px;
 	background: #C2185B;
 	display: flex;
+	justify-content: space-between;
 	position: fixed;
 }
 
@@ -18,21 +19,68 @@
 	padding: 20px 0 0 20px;
 }
 
-.div-menu {
-	width: 80%;
+.div-hamburger {
+	margin-top: 25px;
+	display: block;
+}
+
+.nav {
+	width: 100%;
+	height: 100px;
+	margin-top: 87px;
+	position: fixed;
+	opacity: 0.8;
 }
 
 .menu {
-	display: flex;
+	width: 100%;
+	height: 100px;
 	list-style: none;
-	float:right;
-	height: 30px;
-	margin-right: 25px;
-	margin-top: 25px;
+	float: left;
 }	
 
 .menu-item {
-	height: 30px;
-	margin-left: 15px;
+	width: 100%;
+	height: 60px;
+	background-color: #C2185B;
 }
 
+.menu-item a {
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	display: block;
+	text-align: center;
+	color: #FFF;
+	text-decoration: none;
+}
+
+/* 800px */
+@media screen and (min-width: 50em) {
+	.div-hamburger {
+		display: none;
+	}
+
+	.nav {
+		width: auto;
+		height: auto;
+		margin-top: 10px;
+		right: 20px;
+	}
+
+	.menu {
+		width: auto;
+		height: auto;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.menu-item {
+		width: 100px;
+		background-color: transparent;
+	}
+}
+
+/* 1024*/
+@media screen and (min-width: 50em) {
+}
