--- a/site-juca-sexshop-responsive/style.css
+++ b/site-juca-sexshop-responsive/style.css
@@ -120,43 +120,30 @@
 }
 
 .titulo-container {
-	width: 280px;
-	height: 40px;
-	background-color: #C2185B;
-	color: #fff;
-	font-size: 22px;
-	margin: 7px;
-	margin-top: 10px;
+	padding: 15px 15px 10px 15px;
 }
 
-.div-titulo-produto {
-	width: 300px;
+.div-titulo-container {
+	width: 100%;
 	height: 40px;
+	margin: 0 15px 0 0;
 	background-color: #C2185B;
 	color: #fff;
 	font-size: 22px;
-	margin: 6px;
 }	
 
-.div-titulo-produto p {
-	margin: 5px;
-  padding: 5px;
+.div-titulo-container p {
+	padding: 7px 0 0 10px;
+	font-size: 19px;
 }
 
-.titulo-container-2 {
+.div-titulo-container-2 {
 	display: none;
-	width: 280px;
-	height: 40px;
-	background-color: #C2185B;
-	color: #fff;
-	font-size: 22px;
-	margin: 12px;
 }
 
 .div-produto {
-	padding: 5px;
-	margin: 7px;
-	margin-bottom: 8px;
+	padding: 15px 15px 15px 15px;
+	margin: 15px 15px 15px 20px;
 	margin-top: 5px;
 	background-color: #D6D6D6;
 	box-shadow: 2px 2px 2px #777;
@@ -180,30 +167,61 @@
   color: #000;	
 }
 
-/*375px*/
-@media screen and  (min-width: 23.4375em) {
-	.titulo-container {
-		width: 280px;
-		height: 40px;
-		background-color: #C2185B;
-		color: #fff;
-		font-size: 22px;
-		margin: 7px;
-		margin-top: 10px;
-	}	
-
-	.div-titulo-produto {
-		width: 357px;
-		height: 40px;
-		background-color: #C2185B;
-		color: #fff;
-		font-size: 22px;
-		margin: 6px;
-	}	
-
-	
+.separador-container {
+	margin: 0 15px 0 20px
+}
 
 
+.div-separador-container {
+  width: 100%;
+  height: 1px;
+  background-color: #536DFE;
+}
+
+.servicos-container {
+	display: flex;
+	flex-direction: column;
+	margin: 15px 0 0 20px;
+}
+
+.div-servico {
+	margin: 0 15px 20px 0;
+	padding: 8px 10px 0px 10px;
+	height: 400px;
+	background-color: #D6D6D6;
+	box-shadow: 2px 2px 2px #777;
+}
+
+.div-servico img {
+	width: 100%;
+}
+
+.div-titulo-texto-servico p {
+	margin: 15px 0 0 15px;
+	text-align: left;
+	color: #526CFE;
+	font-size: 22px;
+}
+
+.div-texto-servico p {
+	margin: 15px 0 0 16px;
+  font-size: 16px;
+}
+
+.div-campo-formulario input {
+	width: 274px;
+	height: 30px;
+	margin: 15px 0px 0 21px;
+	border: solid;
+	border-color: #c2185b;
+	border-style: ridge;
+	border-width: 2px;
+}
+
+.div-mensagem-formulario textarea {
+	width: 274px;
+  height: 100px;
+  margin: 15px 0px 0 21px;
 
 }
 
@@ -228,16 +246,25 @@
 		width: 94%;
 		height: 94%;
 	}
-	.div-titulo-produto {
-		width: 387px;
-		height: 40px;
-		background-color: #C2185B;
-		color: #fff;
-		font-size: 22px;
-		margin: 6px;
-	}	
 
-}
+	.titulo-container {
+    padding: 15px 15px 10px 15px;
+	}
+
+	.div-titulo-container {
+    width: 100%;
+    height: 40px;
+    margin: 0 15px 0 0;
+    background-color: #C2185B;
+    color: #fff;
+    font-size: 22px;
+	}
+
+	.produtos-container {
+		display: flex;
+		justify-content: row;
+	}
+
 /*500px*/
 @media screen and (min-width: 31.25em) {
 	
@@ -262,6 +289,7 @@
 		height: 94%;
 	}
 }
+
 
 /*600px*/
 @media screen and (min-width: 37.5em) {
@@ -288,6 +316,8 @@
 		width: 94%;
 		height: 94%;
 	}
+
+}
 
 }
 
@@ -362,7 +392,7 @@
 
 
 	.banner-container {
-		position: absolute;
+		position: relative;
 		width: 100%;
 		height: 390px;
 	}
@@ -395,6 +425,10 @@
 		margin-left: 20px;
 		font-size: 22px;
 	}
+	.div-titulo-banner p {
+		padding: 0px;
+	}
+
 
 	.div-separador {
 		width: 386px;
@@ -406,6 +440,49 @@
 	.div-texto-banner {
 		font-size: 18px;
 		margin-left: 9px;
+	}
+
+	.produtos-container {
+		display: flex;
+		flex-direction: row;
+	}
+	
+	.titulo-container {
+		padding: 40px 0 40px 25px;
+	}
+
+	.div-titulo-container {
+		width: 392px;
+    height: 50px;
+		background-color: #C2185B;
+		color: #fff;
+		font-size: 22px;
+		margin: 6px;
+	}	
+
+	.div-titulo-container p {
+		padding: 10px 0 0 15px;
+	}
+
+
+	.div-titulo-container-2 {
+		display: block;
+    margin-left: 397px;
+    margin-top: -9px;
+    width: 85px;
+    height: 3px;
+    background-color: #C2185B;
+	}
+
+	.produtos-container {
+		padding: 0 0 0 20px;
+	}
+
+	.div-produto {
+		padding: 8px 8px 8px 8px;
+    margin: 8px 8px 8px 10px;
+    background-color: #D6D6D6;
+    box-shadow: 2px 2px 2px #777;
 	}
 }
 
@@ -429,3 +506,19 @@
 		z-index: 1;
 }
 */
+
+/*1200px*/
+	@media screen and (min-width: 75em) {
+	
+	.titulo-container {
+		padding: 40px 0 40px 40px;
+	}
+
+	.div-produto {
+		padding: 15px 15px 15px 15px;
+		margin: 15px 15px 15px 25px;
+		margin-top: 5px;
+		background-color: #D6D6D6;
+		box-shadow: 2px 2px 2px #777;
+	}
+}
