--- a/site-juca-sexshop-responsive/style.css
+++ b/site-juca-sexshop-responsive/style.css
@@ -15,7 +15,7 @@
 	position: fixed;
 	z-index: 1000;
 }
-	
+
 .div-logo {
 	width: 20%;
 	padding: 20px 0 0 20px;
@@ -120,7 +120,7 @@
 }
 
 .titulo-container {
-	padding: 15px 15px 10px 15px;
+	padding: 15px 15px 10px 20px;
 }
 
 .div-titulo-container {
@@ -156,15 +156,15 @@
 
 .titulo-texto-produto p {
 	margin: 5px;
-  padding: 5px;
-  font-size: 22px;
-  color: #526CFE;	
+	padding: 5px;
+	font-size: 22px;
+	color: #526CFE;	
 }
 
 .texto-produto p {
 	margin: 5px;
-  padding: 5px;
-  color: #000;	
+	padding: 5px;
+	color: #000;	
 }
 
 .separador-container {
@@ -173,9 +173,9 @@
 
 
 .div-separador-container {
-  width: 100%;
-  height: 1px;
-  background-color: #536DFE;
+	width: 100%;
+	height: 1px;
+	background-color: #536DFE;
 }
 
 .servicos-container {
@@ -186,8 +186,8 @@
 
 .div-servico {
 	margin: 0 15px 20px 0;
-	padding: 8px 10px 0px 10px;
-	height: 400px;
+	padding: 8px 10px 15px 10px;
+	height: 100%;
 	background-color: #D6D6D6;
 	box-shadow: 2px 2px 2px #777;
 }
@@ -205,30 +205,86 @@
 
 .div-texto-servico p {
 	margin: 15px 0 0 16px;
-  font-size: 16px;
+	font-size: 16px;
+}
+
+.div-campo-formulario {
+	height: auto;
 }
 
 .div-campo-formulario input {
-	width: 274px;
+	width: 100%;
 	height: 30px;
-	margin: 15px 0px 0 21px;
+	margin: 15px 0px 0 0px;
 	border: solid;
 	border-color: #c2185b;
 	border-style: ridge;
 	border-width: 2px;
+	padding: 7px 0 0px 8px;
+}
+
+.div-mensagem-formulario {
+	width: auto;
 }
 
 .div-mensagem-formulario textarea {
-	width: 274px;
-  height: 100px;
-  margin: 15px 0px 0 21px;
-
+	width: 100%;
+	height: 100px;
+	margin: 15px 0px 0 0px;
+	border: solid;
+	border-color: #c2185b;
+	border-style: ridge;
+	border-width: 2px;
+	padding: 7px 0 0px 8px;
 }
 
+.div-mapa {
+	display: none;
+}
+
+.sombra-mapa {
+	display: none;
+}
+
+.div-botao input {
+	width: 100%;
+	height: 50px;
+	background-color: #C2185B;
+	margin: 10px 0;
+	color: #fff;
+	border: none;
+}
+
+.footer  {
+	width: 100%;
+	height: 25px;
+	padding: 3px 0px 0 40px;
+	margin-top: 40px;
+	background-color: #C2185B;
+}
+
+.footer p {
+	font-size: 15px;
+	color: #fff;
+}
+
+.div-telefone-mapa {
+	position: absolute;
+  top: 0;
+  padding: 7px 0 0 20px;
+}
+
+.div-telefone-mapa p {
+	color: #fff;
+	font-size: 26px;
+}
+
+.contato-container {
+	padding: 0 20px 0 20px;
+}
 
 /*400px */
 @media screen and  (min-width: 25em) {
-	/*BANNER*/
 	.div-titulo-banner {
 		margin-left: 10px;
 		font-size: 20px;
@@ -247,23 +303,11 @@
 		height: 94%;
 	}
 
-	.titulo-container {
-    padding: 15px 15px 10px 15px;
-	}
-
-	.div-titulo-container {
-    width: 100%;
-    height: 40px;
-    margin: 0 15px 0 0;
-    background-color: #C2185B;
-    color: #fff;
-    font-size: 22px;
-	}
-
 	.produtos-container {
 		display: flex;
 		justify-content: row;
 	}
+}
 
 /*500px*/
 @media screen and (min-width: 31.25em) {
@@ -275,250 +319,399 @@
 	}
 
 	.div-separador {
-		margin-top: -2px;
-		margin-left: 11px;
+		margin-top: -8px;
+		margin-left: 20px;
 		width: 420px;
 		height: 3px;
-		background: #C2185B; 
+		background: #C2185B;
 	}
-
-	.div-texto-banner {
+	.div-texto-banner p {
 		padding: 10px;
-		font-size: 18px;
-		width: 94%;
-		height: 94%;
-	}
-}
-
-
-/*600px*/
-@media screen and (min-width: 37.5em) {
-
-	.div-titulo-banner {
-		margin: 10px;
-		margin-top: 5px;
-		margin-left: 10px;
-		margin: 5px;
-		font-size: 30px;
-	}
-
-	.div-separador {
-		margin-top: -8px;
-		margin-left: 11px;
-		width: 525px;
-		height: 3px;
-		background: #C2185B; 
-	}
-
-	.div-texto-banner {
-		padding: 15px;
-		font-size: 20px;
+		font-size: 19px;
 		width: 94%;
 		height: 94%;
 	}
 
-}
-
-}
-
-/*700px*/
-@media screen and (min-width: 43.75em) {
-
-	.div-titulo-banner {
-		margin: 10px;
-		padding: 3px;
-		font-size: 30px;
-	}
-
-	.div-separador {
-		margin-top: -10px;
-		margin-left: 15px;
-		width: 525px;
-		height: 3px;
-		background: #C2185B; 
-	}
-
-	.div-texto-banner {
-		padding: 15px;
-		font-size: 22px;
-		width: 94%;
-		height: 94%;
-	}
-}
-
-/* 800px */
-@media screen and (min-width: 50em) {
-
-	.div-hamburger {
-		display: none;
-	}
-	
-	.nav {
-		width: auto;
-		height: auto;
-		margin-top: 10px;
-		right: 20px;
-		display: block !important;
-	}
-
-	.menu {
-		width: auto;
-		height: auto;
+	.div-formulario-nome-email {
 		display: flex;
 		justify-content: space-between;
 	}
-	
-	.menu-item {
-		width: 100px;
-		background-color: transparent;
+
+	.div-campo-formulario {
+			width: 100%;
+	}
+	.div-formulario-nome-email input {
+		width: 98%;
+		height: 30px;
+		margin: 15px 0px 0 0px;
+		border: solid;
+		border-color: #c2185b;
+		border-style: ridge;
+		border-width: 2px;
+		padding: 7px 0 0px 8px;	
 	}
 
-	.menu-item a {
-		font-size: 18px;
-		line-height: 60px;
-		color: #FFF;
-		display: block;
-		text-decoration: none;
-		text-align: center;
-		vertical-align: center;
-		transition: all 0.2s linear;
-	}
+	.div-contato {
 
-	.menu-item:hover {
-		height: 45px;
-		border-bottom: 5px solid;	
-		border-color: #fff;
-	}
-
-
-	.banner-container {
-		position: relative;
-		width: 100%;
-		height: 390px;
-	}
-
-	.div-sombra-banner {
-		background-color: #000;
-		opacity: 0.3;
-	}
-
-	.img-banner {
-		width: 100%;
-		height: 390px;
-	
-	}
-
-	.div-descricao-container {
-		position: absolute;
-		width: 479px;
-		height: 250px;
-		left: auto;
-		right: 2%;
-		bottom: 8%;
-		top: auto;
-		background-color: #000;
-		opacity: 0.6;
-	}
-
-	.div-titulo-banner {
-		margin-top: 20px;
-		margin-left: 20px;
-		font-size: 22px;
-	}
-	.div-titulo-banner p {
-		padding: 0px;
-	}
-
-
-	.div-separador {
-		width: 386px;
-		height: 3px;
-		margin-left: 24px;
-		background: #C2185B; 
-	}
-
-	.div-texto-banner {
-		font-size: 18px;
-		margin-left: 9px;
-	}
-
-	.produtos-container {
-		display: flex;
-		flex-direction: row;
-	}
-	
-	.titulo-container {
-		padding: 40px 0 40px 25px;
-	}
-
-	.div-titulo-container {
-		width: 392px;
-    height: 50px;
-		background-color: #C2185B;
-		color: #fff;
-		font-size: 22px;
-		margin: 6px;
-	}	
-
-	.div-titulo-container p {
-		padding: 10px 0 0 15px;
-	}
-
-
-	.div-titulo-container-2 {
-		display: block;
-    margin-left: 397px;
-    margin-top: -9px;
-    width: 85px;
-    height: 3px;
-    background-color: #C2185B;
-	}
-
-	.produtos-container {
-		padding: 0 0 0 20px;
-	}
-
-	.div-produto {
-		padding: 8px 8px 8px 8px;
-    margin: 8px 8px 8px 10px;
-    background-color: #D6D6D6;
-    box-shadow: 2px 2px 2px #777;
+		padding: 0 0 0 0;
 	}
 }
 
 
-/*900px*/
-@media screen and (min-width: 56.25em) {
 
-	
-}
 
-/* 1024px
-@media screen and (min-width: 64em) {
-	.div-banner {
-		position: absolute;
-		width: 100%;
-		height: 270px;
-		margin-top: 80px;
-		background-color: #000;
-		margin-top: 87px;
-		opacity: 0.1;
-		z-index: 1;
-}
-*/
+	/* 800px */
+	@media screen and (min-width: 50em) {
+
+		.div-hamburger {
+			display: none;
+		}
+
+		.nav {
+			width: auto;
+			height: auto;
+			margin-top: 10px;
+			right: 20px;
+			display: block !important;
+		}
+
+		.menu {
+			width: auto;
+			height: auto;
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.menu-item {
+			width: 100px;
+			background-color: transparent;
+		}
+
+		.menu-item a {
+			font-size: 18px;
+			line-height: 60px;
+			color: #FFF;
+			display: block;
+			text-decoration: none;
+			text-align: center;
+			vertical-align: center;
+			transition: all 0.2s linear;
+		}
+
+		.menu-item:hover {
+			height: 45px;
+			border-bottom: 5px solid;	
+			border-color: #fff;
+		}
+
+
+		.banner-container {
+			position: relative;
+			width: 100%;
+			height: 390px;
+		}
+
+		.div-sombra-banner {
+			background-color: #000;
+			opacity: 0.3;
+		}
+		
+		.img-banner {
+			width: 100%;
+			height: 390px;
+		}
+
+		.div-descricao-container {
+			position: absolute;
+			width: 479px;
+			height: 250px;
+			left: auto;
+			right: 2%;
+			bottom: 8%;
+			top: auto;
+			background-color: #000;
+			opacity: 0.6;
+		}
+
+		.div-titulo-banner {
+			margin-top: 20px;
+			margin-left: 20px;
+			font-size: 22px;
+		}
+
+		.div-titulo-banner p {
+			padding: 0px;
+		}
+
+
+		.div-separador {
+			width: 386px;
+			height: 3px;
+			margin-left: 26px;
+			margin: 0px 0 0px 25px;
+			background: #C2185B;
+		}
+		.div-texto-banner {
+			font-size: 18px;
+			margin-left: 9px;
+		}
+
+		.produtos-container {
+			display: flex;
+			flex-direction: row;
+		}
+
+		.titulo-container {
+			padding: 40px 0 40px 40px;
+		}
+
+		.div-titulo-container {
+			width: 392px;
+			height: 50px;
+			background-color: #C2185B;
+			color: #fff;
+			font-size: 22px;
+		}	
+
+		.div-titulo-container p {
+			padding: 10px 0 0 15px;
+		}
+
+		.div-titulo-container-2 {
+			display: block;
+			margin-left: 385px;
+			margin-top: -3px;
+			width: 85px;
+			height: 3px;
+			background-color: #C2185B;
+		}
+
+		.produtos-container {
+			padding: 0 0 0 40px;
+			margin: 0 10px 0 0;
+		}
+
+		.div-produto {
+			padding: 8px 8px 8px 8px;
+			margin: 0 20px 0 0;
+			background-color: #D6D6D6;
+			box-shadow: 2px 2px 2px #777;
+		}
+
+		.servicos-container {
+			display: flex;
+			flex-direction: column;
+			margin: 0px 15px 0px 40px;
+		}
+
+
+		.img-container {
+			width: 40%;
+		}
+		.texto-container {
+			width: 60%;
+		}
+
+		.separador-container {
+			margin: 40px 25px 0 40px;
+		}
+
+		.div-separador-container {
+			width: 100%;
+			height: 1px;
+			background-color: #536DFE;
+		}
+
+		.div-servico {
+			margin: 20px 15px 0px 0;
+			padding: 15px 15px 10px 15px;
+			display: flex;
+			height: 100%;
+			background-color: #D6D6D6;
+			box-shadow: 2px 2px 2px #777;
+		}
+		
+		.contato-container {
+    	padding: 0 20px 20px 20px;
+		}
+
+		.div-contato {
+			display: flex;
+		}
+
+		.div-formulario {
+			width: 50%;
+			position: relative;
+			
+		}
+
+		.div-mapa {
+			display: block;
+			position: relative;
+			width: 50%;
+		}
+
+		.div-mapa img {
+			width: 100%;
+		}
+
+		.sombra-mapa {
+			position: absolute;
+			display: block;
+			width: 100%;
+			height: 50px;
+			top:0;
+			background-color: #000;
+			opacity: 0.7;
+		}
+
+		.div-formulario-nome-email {
+			display: block;
+		}
+
+		.div-campo-formulario {
+			padding: 0 40px 0 0;
+			width: 100%;
+		}
+
+		.div-campo-formulario {
+			padding: 0 40px 0 0;
+			height: auto;
+		}
+
+		.div-botao {
+			position: absolute;
+    	right: 3%;
+		}
+
+		.div-botao input {
+			width: 150px;
+			height: 50px;
+			background-color: #C2185B;
+		}
+
+		.div-campo-formulario input {
+			width: 100%;
+			height: 40px;
+			margin: 0px 0px 15px 21px;
+			border: solid;
+			border-color: #c2185b;
+			border-style: ridge;
+			border-width: 2px;
+			padding: 7px 0 0px 8px;
+		}
+
+		.div-mensagem-formulario {
+			padding: 0 40px 0 0;
+			width: auto;
+		}
+
+		.div-mensagem-formulario textarea {
+			width: 100%;
+			height: 100%;
+			margin: 0px 0px 0 21px;
+			border: solid;
+			border-color: #c2185b;
+			border-style: ridge;
+			border-width: 2px;
+			padding: 7px 0 0px 8px;
+
+		}
+
+	}
+
 
 /*1200px*/
-	@media screen and (min-width: 75em) {
-	
-	.titulo-container {
-		padding: 40px 0 40px 40px;
-	}
+@media screen and (min-width: 75em) {
 
-	.div-produto {
-		padding: 15px 15px 15px 15px;
-		margin: 15px 15px 15px 25px;
-		margin-top: 5px;
-		background-color: #D6D6D6;
-		box-shadow: 2px 2px 2px #777;
+    .titulo-texto-produto p {
+    	margin: 5px;
+    	padding: 5px;
+    	font-size: 25px;
+    	color: #526CFE;
+    }
+    .texto-produto p {
+    	margin: 5px;
+    	padding: 5px;
+    	color: #000;
+    	font-size: 20px;
+    }
+    .div-titulo-texto-servico p {
+    	margin: 15px 0 0 15px;
+    	text-align: left;
+    	color: #526CFE;
+    	font-size: 30px;
+    }
+
+    .div-texto-servico p {
+    	margin: 15px 0 0 16px;
+    	font-size: 20px;
+    }
+
+    .div-titulo-container p {
+    	padding: 8px 0 0 15px;
+    	font-size: 27px;
+    }
+
+    .nav {
+    	width: auto;
+    	height: auto;
+    	margin-top: 10px;
+    	right: 60px;
+    	display: block !important;
+    }
+
+    .menu-item a {
+    	font-size: 20px;
+    	line-height: 60px;
+    	color: #FFF;
+    	display: block;
+    	text-decoration: none;
+    	text-align: center;
+    	vertical-align: center;
+    	transition: all 0.2s linear;
+    }
+  }
+
+/*1200px*/
+ @media screen and (min-width: 75em) {
+  	servico p {
+  		margin: 15px 0 0 15px;
+  		text-align: left;
+  		color: #526CFE;
+  		font-size: 34px;
+  	}
+  	.div-texto-servico p {
+  		margin: 15px 0 0 16px;
+  		font-size: 20px;
+  	}
+}
+
+ /*1300px*/
+ @media screen and (min-width: 81.25em) {
+  	servico p {
+  		margin: 15px 0 0 15px;
+  		text-align: left;
+  		color: #526CFE;
+  		font-size: 34px;
+  	}
+  	.div-texto-servico p {
+  		margin: 15px 0 0 16px;
+  		font-size: 20px;
+  	}
+}
+
+/*1350px*/
+@media screen and (min-width: 84.375em) {
+	.div.servico p {
+		margin: 15px 0 0 15px;
+		text-align: left;
+		color: #526CFE;
+		font-size: 34px;
+	}
+	.div-texto-servico p {
+		margin: 15px 0 0 16px;
+		font-size: 20px;
 	}
 }
+
